# PersonalKnowledgeAssistant

./: .dockerignore  .env_template  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml
.claude/: settings.local.json
src/: document_processor.py
src/ConsoleClient/: main.py
src/DocUploaderTool/: main.py
src/RetrieverServer/: main.py  model_prompting.py  retriever.py
src/database/: base.py  weaviate_client.py
src/document_processing/: chunk_formatter.py  loader_registry.py  loaders.py  text_embedder.py
src/document_processing/chunking/: base.py  factory.py  fixed_size.py
src/enums/: chunking_types.py  file_types.py
tests/: conftest.py  test_document_processor.py
tests/database/: test_weaviate_client.py
tests/document_processing/: test_chunk_formatter.py  test_loader_registry.py  test_loaders.py  test_text_embedder.py
tests/document_processing/chunking/: test_factory.py  test_fixed_size.py
